# viur-light-mock

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/viur/light_mock/: __init__.py  fakes.py  fixtures.py  modules.py  overlay.py  plugin.py
tests/: test_fakes.py  test_fixtures.py  test_modules.py  test_overlay.py  test_plugin.py
